# Exercise_algo

./: CMakeLists.txt  README.md
script/: start.sh
src/: printMagicMatrix.cpp  printNumber.cpp  searchMoney.cpp
