CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(Dac)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

SET(SOURCEPATH /home/achang/program_algo/Divide_And_Conquer/src)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

ADD_EXECUTABLE(printNumber ${SOURCEPATH}/printNumber.cpp)
ADD_EXECUTABLE(printMagicMatrix ${SOURCEPATH}/printMagicMatrix.cpp)
ADD_EXECUTABLE(searchMoney ${SOURCEPATH}/searchMoney.cpp)
